k8s/mongo-express.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
      - name: mongo-express
        image: mongo-express
        ports:
        - containerPort: 8081
---

apiVersion: v1
kind: Service
metadata:
  name: mongo-express-svc
spec:
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
    name: http
  selector:
    app: mongo-express

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mongo-express-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: db.dixon.xyz
    http:
      paths:
      - path: /
        backend:
          serviceName: mongo-express-svc
          servicePort: 8081
